feat: 国际化处理tab栏

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,3 +1,6 @@
 {
-  "hello": "Hello"
+  "chanPinZhongXin": "Product Center",
+  "fuWuZhiChi": "service support",
+  "guanYuWoMen": "about Us",
+  "jieJueFangAn": "solution"
 }
