--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,10 @@
 {
   "chanPinZhongXin": "Product Center",
+  "diZhi": "address",
+  "dianHua": "Telephone",
   "fuWuZhiChi": "service support",
   "guanYuWoMen": "about Us",
-  "jieJueFangAn": "solution"
+  "heZuo": "cooperate",
+  "jieJueFangAn": "solution",
+  "lianXiWoMen": "contact us"
 }
