--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -1,6 +1,10 @@
 {
   "chanPinZhongXin": "产品中心",
+  "diZhi": "地址",
+  "dianHua": "电话",
   "fuWuZhiChi": "服务支持",
   "guanYuWoMen": "关于我们",
-  "jieJueFangAn": "解决方案"
+  "heZuo": "合作",
+  "jieJueFangAn": "解决方案",
+  "lianXiWoMen": "联系我们"
 }
